WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
205715
NetworkResourceLoader::didFinishWithRedirectResponse should not assume the load is coming from network
https://bugs.webkit.org/show_bug.cgi?id=205715
Summary
NetworkResourceLoader::didFinishWithRedirectResponse should not assume the lo...
youenn fablet
Reported
2020-01-03 03:46:40 PST
NetworkResourceLoader::didFinishWithRedirectResponse should not assume the load is coming from network
Attachments
Patch
(3.24 KB, patch)
2020-01-03 05:28 PST
,
youenn fablet
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
youenn fablet
Comment 1
2020-01-03 05:28:50 PST
Created
attachment 386675
[details]
Patch
youenn fablet
Comment 2
2020-01-03 05:30:22 PST
<
rdar://problem/54153905
>
WebKit Commit Bot
Comment 3
2020-01-03 09:40:19 PST
Comment on
attachment 386675
[details]
Patch Clearing flags on attachment: 386675 Committed
r254004
: <
https://trac.webkit.org/changeset/254004
>
WebKit Commit Bot
Comment 4
2020-01-03 09:40:21 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug