NetworkResourceLoader::didFinishWithRedirectResponse should not assume the load is coming from network https://bugs.webkit.org/show_bug.cgi?id=205715

Reviewed by Alex Christensen.

Source/WebKit:

Covered by updated test.

* NetworkProcess/NetworkResourceLoader.cpp:
(WebKit::NetworkResourceLoader::didFinishWithRedirectResponse):
If redirection is coming from cache, the load is not null.
We just need to use the request URL since the redirection mode is manual.

LayoutTests:

* http/wpt/prefetch/link-prefetch-main-resource-redirect.html:


Canonical link: https://commits.webkit.org/218880@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@254004 268f45cc-cd09-0410-ab3c-d52691b4dbfc